Refactor bandit file structure

--- a/notebooks/bandit/compare.ipynb
+++ b/notebooks/bandit/compare.ipynb
@@ -40,20 +40,20 @@
    "outputs": [],
    "source": [
     "from bart_playground.bandit.bcf_agent import BCFAgent, BCFAgentPSOff\n",
-    "from bart_playground.bandit.basic_agents import SillyAgent, LinearTSAgent\n",
+    "from bart_playground.bandit.agents.basic_agents import SillyAgent, LinearTSAgent\n",
     "from bart_playground.bandit.ensemble_agent import EnsembleAgent\n",
     "from bart_playground.bandit.me_agents import HierTSAgent, LinearTSAgent2, LinearUCBAgent, METSAgent\n",
-    "from bart_playground.bandit.bart_agent import BARTAgent, LogisticBARTAgent, DefaultBARTAgent, MultiChainBARTAgent\n",
-    "from bart_playground.bandit.refresh_agent import RefreshDefaultBARTAgent, RefreshLogisticBARTAgent\n",
+    "from bart_playground.bandit.agents.bart_agent import DefaultBARTAgent\n",
+    "from bart_playground.bandit.agents.refresh_agent import RefreshDefaultBARTAgent\n",
     "from bart_playground.bart import DefaultBART, LogisticBART\n",
     "\n",
-    "from bart_playground.bandit.TEagents import TEAgent\n",
+    "from bart_playground.bandit.baseline_wrappers.TEagents import TEAgent\n",
     "\n",
     "\n",
     "from compare_agents import (\n",
     "    AgentSpec, compare_agents_across_scenarios, print_summary_results, plot_comparison_results\n",
     ")\n",
-    "from bart_playground.bandit.sim_util import _sim_logger, OpenMLScenario, FriedmanDScenario, FriedmanScenario, LinearScenario, GLMScenario, LinearFriedmanScenario\n",
+    "from bart_playground.bandit.experiment_utils.sim_util import _sim_logger, OpenMLScenario, FriedmanScenario, LinearScenario, GLMScenario, LinearFriedmanScenario\n",
     "# from bart_playground.bandit.rome.rome_scenarios import HomogeneousScenario, NonlinearScenario\n",
     "from drinkless import DrinkLessScenario"
    ]
@@ -68,7 +68,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "886911e2",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +147,7 @@
     "has_gpu = True\n",
     "try:\n",
     "    import torch\n",
-    "    from bart_playground.bandit.neural_paper_agents import NeuralTSDiagAgent, LinearTSDiagAgent, KernelTSDiagAgent, NeuralTSAgent, NLinearTSAgent, NKernelTSAgent\n",
+    "    from bart_playground.bandit.baseline_wrappers.neural_paper_agents import NeuralTSDiagAgent, LinearTSDiagAgent, KernelTSDiagAgent, NeuralTSAgent, NLinearTSAgent, NKernelTSAgent\n",
     "except:\n",
     "    has_gpu = False\n",
     "    _sim_logger.warning(\"Neural agents not available. Skipping GPU-based agents.\")"
@@ -356,7 +355,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f36cbe9",
    "metadata": {},
    "source": [
     "### Initialization"
@@ -398,7 +396,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "cc0476e5",
    "metadata": {
     "lines_to_next_cell": 1
    },
