--- a/notebooks/bandit/test_bandit.ipynb
+++ b/notebooks/bandit/test_bandit.ipynb
@@ -15,13 +15,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from bart_playground.bandit.bart_agent import LogisticBARTAgent, DefaultBARTAgent\n",
-    "from bart_playground.bandit.sim_util import *\n",
+    "from bart_playground.bandit.agents.bart_agent import LogisticBARTAgent, DefaultBARTAgent\n",
+    "from bart_playground.bandit.experiment_utils.sim_util import *\n",
     "\n",
-    "from bart_playground.bandit.TEagents import TEAgent"
+    "from bart_playground.bandit.baseline_wrappers.TEagents import TEAgent"
    ]
   },
   {
@@ -58,7 +58,7 @@
     "agent1 = TEAgent(n_arms=scenario.K, n_features=scenario.P, agent_type='random_forest')\n",
     "agent_d = DefaultBARTAgent(n_arms=scenario.K, n_features=scenario.P, n_trees=50, nskip=20, ndpost=20)\n",
     "\n",
-    "from bart_playground.bandit.refresh_agent import RefreshDefaultBARTAgent\n",
+    "from bart_playground.bandit.agents.refresh_agent import RefreshDefaultBARTAgent\n",
     "agent2 = RefreshDefaultBARTAgent(n_arms=scenario.K, n_features=scenario.P, n_trees=50, nskip=200, ndpost=800)\n",
     "\n",
     "agents = [agent, agent0, agent1, agent_d, agent2]\n",
