--- a/notebooks/bandit/test_time_comp.ipynb
+++ b/notebooks/bandit/test_time_comp.ipynb
@@ -34,7 +34,7 @@
     }
    ],
    "source": [
-    "from bart_playground.bandit.sim_util import LinearScenario, LinearOffsetScenario, OffsetScenario, FriedmanScenario\n",
+    "from bart_playground.bandit.experiment_utils.sim_util import OffsetScenario\n",
     "\n",
     "n_simulations = 8 \n",
     "n_draws = 600 \n",
