--- a/notebooks/bandit/ope.ipynb
+++ b/notebooks/bandit/ope.ipynb
@@ -22,12 +22,12 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from typing import Dict, List, Tuple\n",
+    "from typing import List\n",
     "\n",
     "# Set random seed for reproducibility\n",
     "np.random.seed(42)\n",
     "\n",
-    "from bart_playground.bandit.ope import evaluate_agents, instantiate_agents\n",
+    "from bart_playground.bandit.experiment_utils.ope import evaluate_agents, instantiate_agents\n",
     "from drinkless import get_DrinkLess"
    ]
   },
@@ -46,9 +46,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bart_playground.bandit.basic_agents import SillyAgent, LinearTSAgent\n",
-    "from bart_playground.bandit.TEagents import TEAgent\n",
-    "from bart_playground.bandit.bart_agent import DefaultBARTAgent, LogisticBARTAgent\n",
+    "from bart_playground.bandit.agents.basic_agents import SillyAgent, LinearTSAgent\n",
+    "from bart_playground.bandit.baseline_wrappers.TEagents import TEAgent\n",
+    "from bart_playground.bandit.agents.bart_agent import DefaultBARTAgent, LogisticBARTAgent\n",
     "from compare_agents import AgentSpec\n",
     "\n",
     "def get_agent_specs() -> List[AgentSpec]:\n",
