--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -56,14 +56,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:02<00:00, 138.52it/s]\n"
+      "Iterations:   0%|          | 0/300 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iterations: 100%|██████████| 300/300 [00:06<00:00, 47.31it/s]\n"
      ]
     }
    ],
@@ -82,7 +89,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 500/500 [00:05<00:00, 89.30it/s]\n"
+      "Iterations:   0%|          | 0/500 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iterations: 100%|██████████| 500/500 [00:09<00:00, 51.05it/s]\n"
      ]
     },
     {
@@ -202,7 +216,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-07-06 18:44:26,046:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
+      "INFO:2025-09-05 03:44:38,843:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n"
      ]
     },
