--- a/test/01_debug.ipynb
+++ b/test/01_debug.ipynb
@@ -22,9 +22,7 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "from bart_playground.DataGenerator import DataGenerator\n",
-    "from bart_playground.params import Tree\n",
-    "from bart_playground.bart import DefaultBART\n",
+    "from bart_playground import DefaultBART, Tree, DataGenerator\n",
     "import bartz"
    ]
   },
@@ -63,14 +61,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations:   0%|          | 0/300 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iterations: 100%|██████████| 300/300 [00:13<00:00, 23.07it/s]\n"
+      "Iterations: 100%|██████████| 300/300 [00:04<00:00, 62.92it/s]\n"
      ]
     }
    ],
@@ -136,7 +127,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 1100/1100 [00:15<00:00, 71.42it/s]\n"
+      "Iterations: 100%|██████████| 500/500 [00:06<00:00, 80.32it/s]\n"
      ]
     },
     {
@@ -256,7 +247,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-06-23 18:27:51,274:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
+      "INFO:2025-09-06 00:06:58,961:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n"
      ]
     },
@@ -289,10 +280,10 @@
     {
      "data": {
       "text/plain": [
-       "{'bart': 2.017674140026814,\n",
-       " 'rf': 17.62572932546826,\n",
-       " 'lr': 0.010385157940898898,\n",
-       " 'btz': 2.043393861149057}"
+       "{'bart': 0.016913205213783065,\n",
+       " 'rf': 0.01570244066836391,\n",
+       " 'lr': 0.04058944845865094,\n",
+       " 'btz': 0.01451765109911874}"
       ]
      },
      "execution_count": 12,
@@ -323,10 +314,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.09659852  0.09275349  0.18248593 -0.21848202 -0.05988892  0.05594227\n",
-      "  0.20686662  0.19135175 -0.20834809 -0.06192682  0.03009366  0.09309844]\n",
-      "[ 0.05106411  0.09666862  0.22040284 -0.18563737 -0.06235941  0.06305607\n",
-      "  0.2060601   0.18239251 -0.20702831 -0.03909112 -0.00949711  0.11126692]\n"
+      "[ 0.31316486  0.28736398  0.31458274  0.30757785 -0.39123347  0.07929082\n",
+      " -0.02212593  0.07817362  0.2402342   0.34557924 -0.09955953  0.03123178]\n",
+      "[ 0.36207604  0.4024236   0.3636108   0.36070073 -0.35991025 -0.07537408\n",
+      " -0.09951471 -0.08413056  0.25953454  0.30643553 -0.1562667  -0.16326775]\n"
      ]
     }
    ],
@@ -399,7 +390,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "btpg",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -413,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
