--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:06<00:00, 47.31it/s]\n"
+      "Iterations: 100%|██████████| 300/300 [00:09<00:00, 32.88it/s]\n"
      ]
     }
    ],
@@ -78,6 +78,46 @@
     "# initialize numba\n",
     "bart = DefaultBART(ndpost=200, nskip=100, n_trees=100, proposal_probs=proposal_probs)\n",
     "bart.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        selected  success  accepted  success_rate  mh_ratio  accept_rate\n",
+      "grow       11825    11825      3621      1.000000  0.306216     0.306216\n",
+      "prune      12191    11493      3471      0.942745  0.302010     0.284718\n",
+      "change      3014     2839      1019      0.941938  0.358929     0.338089\n",
+      "swap        2970     1012       377      0.340741  0.372530     0.126936\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Collect move counts\n",
+    "selected = bart.sampler.move_selected_counts\n",
+    "success = bart.sampler.move_success_counts\n",
+    "accepted = bart.sampler.move_accepted_counts\n",
+    "\n",
+    "# Combine into a DataFrame for easy viewing\n",
+    "df = pd.DataFrame({\n",
+    "    \"selected\": pd.Series(selected),\n",
+    "    \"success\": pd.Series(success),\n",
+    "    \"accepted\": pd.Series(accepted)\n",
+    "})\n",
+    "\n",
+    "# Add success and acceptance rates\n",
+    "df[\"success_rate\"] = df[\"success\"] / df[\"selected\"]\n",
+    "df[\"mh_ratio\"] = df[\"accepted\"] / df[\"success\"]\n",
+    "df[\"accept_rate\"] = df[\"accepted\"] / df[\"selected\"]\n",
+    "\n",
+    "print(df)"
    ]
   },
   {
@@ -359,7 +399,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bart-playground-env",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -373,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
