--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -70,7 +70,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:07<00:00, 41.82it/s]\n"
+      "Iterations: 100%|██████████| 300/300 [00:04<00:00, 65.43it/s] \n"
      ]
     }
    ],
@@ -89,11 +89,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        selected  success  accepted  success_rate  mh_ratio  accept_rate\n",
-      "grow       11825    11825      3621      1.000000  0.306216     0.306216\n",
-      "prune      12191    11493      3471      0.942745  0.302010     0.284718\n",
-      "change      3014     2839      1019      0.941938  0.358929     0.338089\n",
-      "swap        2970     1012       377      0.340741  0.372530     0.126936\n"
+      "        selected  success  accepted  success_rate  accept_rate  change_rate\n",
+      "grow       11825    11825      3621      1.000000     0.306216     0.306216\n",
+      "prune      12191    11493      3471      0.942745     0.302010     0.284718\n",
+      "change      3014     2839      1019      0.941938     0.358929     0.338089\n",
+      "swap        2970     1012       377      0.340741     0.372530     0.126936\n"
      ]
     }
    ],
@@ -112,10 +112,10 @@
     "    \"accepted\": pd.Series(accepted)\n",
     "})\n",
     "\n",
-    "# Add success and acceptance rates\n",
+    "# Add success, acceptance and change rates\n",
     "df[\"success_rate\"] = df[\"success\"] / df[\"selected\"]\n",
-    "df[\"mh_ratio\"] = df[\"accepted\"] / df[\"success\"]\n",
-    "df[\"accept_rate\"] = df[\"accepted\"] / df[\"selected\"]\n",
+    "df[\"accept_rate\"] = df[\"accepted\"] / df[\"success\"] # The \"acceptance rate\" reflects the MH acceptance probability\n",
+    "df[\"change_rate\"] = df[\"accepted\"] / df[\"selected\"] # The \"change rate\" reflects the frequency of tree changes\n",
     "\n",
     "print(df)"
    ]
@@ -136,7 +136,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 500/500 [00:09<00:00, 51.60it/s]\n"
+      "Iterations: 100%|██████████| 500/500 [00:06<00:00, 72.43it/s]\n"
      ]
     },
     {
@@ -256,7 +256,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-09-09 19:55:00,654:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
+      "INFO:2025-09-09 20:11:24,366:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n"
      ]
     },
@@ -399,7 +399,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -413,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
