--- a/notebooks/mtmh/01_debug_profile.ipynb
+++ b/notebooks/mtmh/01_debug_profile.ipynb
@@ -70,7 +70,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 70/70 [00:01<00:00, 37.24it/s]\n"
+      "Iterations: 100%|██████████| 70/70 [00:04<00:00, 17.17it/s]\n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:09<00:00, 31.40it/s]"
+      "Iterations: 100%|██████████| 300/300 [00:34<00:00,  8.78it/s]"
      ]
     },
     {
@@ -123,7 +123,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-08-18 16:58:58,192:jax._src.xla_bridge:752: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
+      "INFO:2025-09-12 17:57:11,302:jax._src.xla_bridge:752: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n"
      ]
     },
@@ -160,7 +160,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:02<00:00, 139.71it/s]"
+      "Iterations: 100%|██████████| 300/300 [00:06<00:00, 49.80it/s]"
      ]
     },
     {
@@ -195,7 +195,7 @@
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.022739425299116663,\n",
+       "{'bart': 0.021602058730366257,\n",
        " 'rf': 0.022139023845392215,\n",
        " 'lr': 0.048045521328019404,\n",
        " 'btz': 0.02515919424231273,\n",
@@ -225,7 +225,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bart_env",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -239,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
