Speed up diagnostics
Use a `collect` method on MultiChainBART to apply functions to actors

--- a/notebooks/01_debug_mc.ipynb
+++ b/notebooks/01_debug_mc.ipynb
@@ -48,17 +48,17 @@
      "output_type": "stream",
      "text": [
       "[[1]\n",
-      " [0]\n",
-      " [1]\n",
-      " [1]\n",
-      " [1]\n",
-      " [1]\n",
-      " [1]\n",
       " [1]\n",
       " [0]\n",
+      " [1]\n",
+      " [0]\n",
+      " [1]\n",
+      " [0]\n",
+      " [1]\n",
       " [0]\n",
       " [0]\n",
-      " [1]]\n"
+      " [0]\n",
+      " [0]]\n"
      ]
     }
    ],
@@ -77,14 +77,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-09-11 15:08:13,318\tINFO worker.py:1942 -- Started a local Ray instance. View the dashboard at \u001b[1m\u001b[32mhttp://127.0.0.1:8265 \u001b[39m\u001b[22m\n"
+      "2025-09-13 19:30:08,959\tINFO worker.py:1942 -- Started a local Ray instance. View the dashboard at \u001b[1m\u001b[32mhttp://127.0.0.1:8265 \u001b[39m\u001b[22m\n"
      ]
     },
     {
@@ -98,32 +98,63 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations:   0%|          | 0/1500 [00:00<?, ?it/s]\n",
-      "Iterations:   0%|          | 1/1500 [00:01<40:55,  1.64s/it]\n",
-      "Iterations:   1%|          | 13/1500 [00:01<02:18, 10.71it/s]\n",
-      "Iterations:   0%|          | 0/1500 [00:00<?, ?it/s]\u001b[32m [repeated 3x across cluster] (Ray deduplicates logs by default. Set RAY_DEDUP_LOGS=0 to disable log deduplication, or see https://docs.ray.io/en/master/ray-observability/user-guides/configure-logging.html#log-deduplication for more options.)\u001b[0m\n",
-      "Iterations:  13%|█▎        | 194/1500 [00:06<00:33, 38.95it/s]\u001b[32m [repeated 167x across cluster]\u001b[0m\n",
-      "Iterations:  13%|█▎        | 190/1500 [00:06<00:33, 39.69it/s]\u001b[32m [repeated 3x across cluster]\u001b[0m\n",
-      "Iterations:  28%|██▊       | 413/1500 [00:11<00:25, 42.61it/s]\u001b[32m [repeated 173x across cluster]\u001b[0m\n",
-      "Iterations:  23%|██▎       | 352/1500 [00:10<00:29, 38.93it/s]\u001b[32m [repeated 4x across cluster]\u001b[0m\n",
-      "Iterations:  43%|████▎     | 642/1500 [00:16<00:15, 56.03it/s]\u001b[32m [repeated 166x across cluster]\u001b[0m\n",
-      "Iterations:  48%|████▊     | 718/1500 [00:16<00:20, 37.76it/s]\u001b[32m [repeated 4x across cluster]\u001b[0m\n",
-      "Iterations:  58%|█████▊    | 865/1500 [00:21<00:11, 55.47it/s]\u001b[32m [repeated 173x across cluster]\u001b[0m\n",
-      "Iterations:  49%|████▉     | 733/1500 [00:19<00:14, 52.95it/s]\u001b[32m [repeated 2x across cluster]\u001b[0m\n",
-      "Iterations:  79%|███████▉  | 1187/1500 [00:26<00:05, 53.34it/s]\u001b[32m [repeated 171x across cluster]\u001b[0m\n",
-      "Iterations:  78%|███████▊  | 1168/1500 [00:26<00:06, 54.66it/s]\u001b[32m [repeated 3x across cluster]\u001b[0m\n",
-      "Iterations:  91%|█████████▏| 1370/1500 [00:29<00:02, 58.25it/s]\n",
-      "Iterations:  92%|█████████▏| 1376/1500 [00:30<00:02, 57.16it/s]\n",
-      "Iterations:  94%|█████████▎| 1406/1500 [00:30<00:01, 50.22it/s]\n",
-      "Iterations:  91%|█████████ | 1366/1500 [00:30<00:02, 55.33it/s]\u001b[32m [repeated 117x across cluster]\u001b[0m\n",
-      "Iterations:  89%|████████▊ | 1328/1500 [00:29<00:03, 55.04it/s]\u001b[32m [repeated 5x across cluster]\u001b[0m\n"
+      "Iterations:   0%|          | 0/2000 [00:00<?, ?it/s]\n",
+      "Iterations:   0%|          | 1/2000 [00:00<14:06,  2.36it/s]\n",
+      "Iterations:   0%|          | 6/2000 [00:00<02:19, 14.30it/s]\n",
+      "Iterations:   1%|          | 11/2000 [00:00<01:26, 22.88it/s]\n",
+      "Iterations:   2%|▏         | 30/2000 [00:01<00:55, 35.57it/s]\n",
+      "Iterations:   9%|▉         | 181/2000 [00:04<00:37, 49.07it/s]\n",
+      "Iterations:   0%|          | 0/2000 [00:00<?, ?it/s]\u001b[32m [repeated 3x across cluster] (Ray deduplicates logs by default. Set RAY_DEDUP_LOGS=0 to disable log deduplication, or see https://docs.ray.io/en/master/ray-observability/user-guides/configure-logging.html#log-deduplication for more options.)\u001b[0m\n",
+      "Iterations:  12%|█▏        | 232/2000 [00:05<00:29, 59.46it/s]\u001b[32m [repeated 163x across cluster]\u001b[0m\n",
+      "Iterations:  12%|█▏        | 243/2000 [00:05<00:30, 57.88it/s]\n",
+      "Iterations:  16%|█▌        | 321/2000 [00:07<00:28, 59.23it/s]\n",
+      "Iterations:  27%|██▋       | 547/2000 [00:10<00:24, 59.67it/s]\u001b[32m [repeated 176x across cluster]\u001b[0m\n",
+      "Iterations:  32%|███▏      | 646/2000 [00:12<00:22, 59.36it/s]\n",
+      "Iterations:  34%|███▍      | 690/2000 [00:12<00:21, 59.68it/s]\n",
+      "Iterations:  41%|████      | 823/2000 [00:15<00:19, 61.10it/s]\u001b[32m [repeated 169x across cluster]\u001b[0m\n",
+      "Iterations:  43%|████▎     | 858/2000 [00:17<00:55, 20.47it/s]\u001b[32m [repeated 3x across cluster]\u001b[0m\n",
+      "Iterations:  53%|█████▎    | 1065/2000 [00:20<00:22, 40.98it/s]\u001b[32m [repeated 148x across cluster]\u001b[0m\n",
+      "Iterations:  51%|█████     | 1012/2000 [00:21<00:16, 58.66it/s]\u001b[32m [repeated 3x across cluster]\u001b[0m\n",
+      "Iterations:  69%|██████▊   | 1371/2000 [00:25<00:10, 59.91it/s]\u001b[32m [repeated 167x across cluster]\u001b[0m\n",
+      "Iterations:  70%|██████▉   | 1395/2000 [00:27<00:10, 58.72it/s]\u001b[32m [repeated 8x across cluster]\u001b[0m\n",
+      "Iterations:  77%|███████▋  | 1543/2000 [00:30<00:10, 42.28it/s]\u001b[32m [repeated 168x across cluster]\u001b[0m\n",
+      "Iterations:  84%|████████▎ | 1672/2000 [00:32<00:07, 43.47it/s]\u001b[32m [repeated 5x across cluster]\u001b[0m\n",
+      "Iterations:  91%|█████████▏| 1828/2000 [00:33<00:03, 56.28it/s]\n",
+      "Iterations:  92%|█████████▏| 1835/2000 [00:33<00:02, 57.89it/s]\n",
+      "Iterations:  92%|█████████▏| 1842/2000 [00:33<00:02, 58.89it/s]\n",
+      "Iterations:  92%|█████████▏| 1849/2000 [00:33<00:02, 59.37it/s]\n",
+      "Iterations:  93%|█████████▎| 1856/2000 [00:33<00:02, 59.82it/s]\n",
+      "Iterations:  93%|█████████▎| 1863/2000 [00:33<00:02, 60.22it/s]\n",
+      "Iterations:  94%|█████████▎| 1870/2000 [00:33<00:02, 60.50it/s]\n",
+      "Iterations:  94%|█████████▍| 1877/2000 [00:34<00:02, 60.49it/s]\n",
+      "Iterations:  94%|█████████▍| 1884/2000 [00:34<00:01, 61.17it/s]\n",
+      "Iterations:  95%|█████████▍| 1891/2000 [00:34<00:01, 61.84it/s]\n",
+      "Iterations:  95%|█████████▍| 1898/2000 [00:34<00:01, 61.95it/s]\n",
+      "Iterations:  95%|█████████▌| 1905/2000 [00:34<00:01, 61.95it/s]\n",
+      "Iterations:  96%|█████████▌| 1912/2000 [00:34<00:01, 61.86it/s]\n",
+      "Iterations:  96%|█████████▌| 1919/2000 [00:34<00:01, 61.39it/s]\n",
+      "Iterations:  96%|█████████▋| 1926/2000 [00:34<00:01, 61.70it/s]\n",
+      "Iterations:  97%|█████████▋| 1933/2000 [00:34<00:01, 61.67it/s]\n",
+      "Iterations:  97%|█████████▋| 1940/2000 [00:35<00:00, 61.34it/s]\n",
+      "Iterations:  97%|█████████▋| 1947/2000 [00:35<00:00, 61.20it/s]\n",
+      "Iterations:  98%|█████████▊| 1954/2000 [00:35<00:00, 61.20it/s]\n",
+      "Iterations:  91%|█████████▏| 1827/2000 [00:35<00:02, 59.53it/s]\n",
+      "Iterations:  98%|█████████▊| 1961/2000 [00:35<00:00, 61.50it/s]\n",
+      "Iterations:  87%|████████▋ | 1748/2000 [00:35<00:06, 39.46it/s]\u001b[32m [repeated 137x across cluster]\u001b[0m\n",
+      "Iterations:  88%|████████▊ | 1767/2000 [00:36<00:04, 57.80it/s]\u001b[32m [repeated 4x across cluster]\u001b[0m\n",
+      "Iterations:  94%|█████████▎| 1870/2000 [00:38<00:02, 58.17it/s]\n",
+      "Iterations:  94%|█████████▍| 1880/2000 [00:38<00:02, 55.05it/s]\u001b[32m [repeated 48x across cluster]\u001b[0m\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 1500/1500 [00:33<00:00, 44.84it/s]\n"
+      "Iterations: 100%|██████████| 2000/2000 [00:40<00:00, 49.29it/s]\n",
+      "Iterations: 100%|██████████| 2000/2000 [00:40<00:00, 49.64it/s]\n",
+      "\u001b[36m(BARTActor pid=3066630)\u001b[0m INFO:arviz.preview:arviz_base not installed\n",
+      "\u001b[36m(BARTActor pid=3066630)\u001b[0m INFO:arviz.preview:arviz_stats not installed\n",
+      "\u001b[36m(BARTActor pid=3066630)\u001b[0m INFO:arviz.preview:arviz_plots not installed\n"
      ]
     }
    ],
@@ -133,7 +164,7 @@
     "    n_ensembles=4,\n",
     "    bart_class=DefaultBART,\n",
     "    random_state=42,\n",
-    "    ndpost=1000,\n",
+    "    ndpost=1500,\n",
     "    nskip=500,\n",
     "    n_trees=200,\n",
     "    proposal_probs=proposal_probs,\n",
@@ -150,7 +181,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'n_chains': 4, 'n_draws': 1000, 'rhat': 1.437292345888082, 'ess_bulk': 7.9294524021810355, 'mcse_over_sd': 0.3521534605795039}\n"
+      "{'n_chains': 4, 'n_draws': 1500, 'rhat': 1.3181011766562776, 'ess_bulk': 9.680559304601305, 'mcse_over_sd': 0.3250638561342832}\n"
      ]
     },
     {
@@ -184,43 +215,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>change</th>\n",
-       "      <td>480274.0</td>\n",
-       "      <td>470214.0</td>\n",
-       "      <td>29222.0</td>\n",
-       "      <td>0.062146</td>\n",
-       "      <td>0.979054</td>\n",
+       "      <td>639842.0</td>\n",
+       "      <td>626704.0</td>\n",
+       "      <td>35182.0</td>\n",
+       "      <td>0.056138</td>\n",
+       "      <td>0.979467</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>grow</th>\n",
-       "      <td>300004.0</td>\n",
-       "      <td>300004.0</td>\n",
-       "      <td>25430.0</td>\n",
-       "      <td>0.084766</td>\n",
+       "      <td>399849.0</td>\n",
+       "      <td>399849.0</td>\n",
+       "      <td>30533.0</td>\n",
+       "      <td>0.076361</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>prune</th>\n",
-       "      <td>299676.0</td>\n",
-       "      <td>293476.0</td>\n",
-       "      <td>23700.0</td>\n",
-       "      <td>0.080756</td>\n",
-       "      <td>0.979311</td>\n",
+       "      <td>400226.0</td>\n",
+       "      <td>392096.0</td>\n",
+       "      <td>28867.0</td>\n",
+       "      <td>0.073622</td>\n",
+       "      <td>0.979686</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>swap</th>\n",
-       "      <td>120046.0</td>\n",
-       "      <td>68464.0</td>\n",
-       "      <td>11121.0</td>\n",
-       "      <td>0.162436</td>\n",
-       "      <td>0.570315</td>\n",
+       "      <td>160083.0</td>\n",
+       "      <td>87931.0</td>\n",
+       "      <td>14370.0</td>\n",
+       "      <td>0.163424</td>\n",
+       "      <td>0.549284</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>overall</th>\n",
-       "      <td>1200000.0</td>\n",
-       "      <td>1132158.0</td>\n",
-       "      <td>89473.0</td>\n",
-       "      <td>0.079029</td>\n",
-       "      <td>0.943465</td>\n",
+       "      <td>1600000.0</td>\n",
+       "      <td>1506580.0</td>\n",
+       "      <td>108952.0</td>\n",
+       "      <td>0.072317</td>\n",
+       "      <td>0.941612</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -228,11 +259,11 @@
       ],
       "text/plain": [
        "          selected   proposed  accepted  acc_rate  prop_rate\n",
-       "change    480274.0   470214.0   29222.0  0.062146   0.979054\n",
-       "grow      300004.0   300004.0   25430.0  0.084766   1.000000\n",
-       "prune     299676.0   293476.0   23700.0  0.080756   0.979311\n",
-       "swap      120046.0    68464.0   11121.0  0.162436   0.570315\n",
-       "overall  1200000.0  1132158.0   89473.0  0.079029   0.943465"
+       "change    639842.0   626704.0   35182.0  0.056138   0.979467\n",
+       "grow      399849.0   399849.0   30533.0  0.076361   1.000000\n",
+       "prune     400226.0   392096.0   28867.0  0.073622   0.979686\n",
+       "swap      160083.0    87931.0   14370.0  0.163424   0.549284\n",
+       "overall  1600000.0  1506580.0  108952.0  0.072317   0.941612"
       ]
      },
      "execution_count": 5,
@@ -260,26 +291,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eps_sigma2': array([0.00006835])}\n"
+      "{'eps_sigma2': array([0.00006481])}\n"
      ]
     }
    ],
    "source": [
     "# Show one actor's last global params (for curiosity)\n",
-    "models = mcb.collect_model_states()\n",
-    "print(models[0].sampler.trace[-1].global_params)"
+    "print(mcb.collect(lambda x: x.sampler.trace[-1].global_params)[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +318,7 @@
      "text": [
       "/home/svu/e1124863/bartpg/lib/python3.11/site-packages/sklearn/base.py:1365: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
       "  return fit_method(estimator, *args, **kwargs)\n",
-      "INFO:2025-09-11 15:10:33,374:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
+      "INFO:2025-09-13 19:32:36,925:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n"
      ]
     },
@@ -296,9 +326,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 100/300 P_grow=0.53 P_prune=0.47 A_grow=0.06 A_prune=0.04 (burnin)\n",
+      "Iteration 100/300 P_grow=0.54 P_prune=0.46 A_grow=0.04 A_prune=0.09 (burnin)\n",
       "Iteration 200/300 P_grow=0.50 P_prune=0.50 A_grow=0.00 A_prune=0.00\n",
-      "Iteration 300/300 P_grow=0.53 P_prune=0.47 A_grow=0.06 A_prune=0.04\n"
+      "Iteration 300/300 P_grow=0.54 P_prune=0.46 A_grow=0.02 A_prune=0.00\n"
      ]
     }
    ],
@@ -315,19 +345,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'mcb': 5.731185110844544e-05,\n",
-       " 'rf': 0.0013759999999999998,\n",
-       " 'lr': 0.051489656277622635,\n",
-       " 'btz': 7.91522252256982e-05}"
+       "{'mcb': 0.005195722343037476,\n",
+       " 'rf': 0.0090316,\n",
+       " 'lr': 0.07115610720784035,\n",
+       " 'btz': 0.003233965253457427}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
